2006-10-24 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/lib/_putchar.c, device/lib/_getchar.c, device/lib/inituart.c:
	Initialize uart only if SM0 and SM1 are zero.  Also, use flag to turn
	on/off CR to CRLF conversion.  

2006-10-25 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: updated IRQ section

2006-10-24 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/lib/serial_io.c: removed
	* device/lib/_putchar.c, device/lib/_getchar.c, device/lib/inituart.c
	replacements for serial_io.c

2006-10-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/main.c (_process_pragma, _parseOptions): fixed bug 1583318

2006-10-24 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/lib/serial_io.c: Default putchar() and getchar() for
	  mcs51 uses serial port.

2006-10-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (movc): improved check for 0 and 1, see RFE 1582704

2006-10-23 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/ports/mcs51/support.c: smaller
	_sdcc_external_startup()
	* device/lib/mcs51/crtxclear.asm: don't check high byte of l_PSEG

2006-10-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/gbz80/crt0.s,
	* device/lib/gbz80/crt0_rle.s,
	* device/lib/gbz80/div.s,
	* device/lib/gbz80/fstubs.s,
	* device/lib/gbz80/heap.s,
	* device/lib/gbz80/mul.s,
	* device/lib/gbz80/putchar.s,
	* device/lib/gbz80/stubs.s,
	* device/lib/z80/crt0.s,
	* device/lib/z80/crt0_rle.s,
	* device/lib/z80/div.s,
	* device/lib/z80/fstubs.s,
	* device/lib/z80/heap.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/putchar.s,
	* device/lib/z80/stubs.s: reverted, I was mistaken

2006-10-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: peephole 238.x added check for notvolatile
	* support/regression/ports/mcs51/support.c: removed race
	condition on TI in _putchar allowing to use serial port mode 0

2006-10-20 Borut Razem <borut.razem AT siol.net>
